# e-render

./: Makefile  README.md  pyproject.toml
.research/index buffer redenderer texture vertex array/: Renderer.h  VertexArray.cpp  VertexArray.h  main.cpp
.test/.research/index buffer redenderer texture vertex array/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBufferLayout.h
.test/.research/todo/static/shader/: basic.frag
e-render/static/shader/: basic.vert
src/ENGINE/.test/: main  main.cpp
src/ENGINE/.test/0-matharr/: Makefile  code.cpp  main.cpp
src/ENGINE/src/: engine.h
src/ENGINE/src/Game-Engine/: game.h
src/ENGINE/src/Math-Engine/: math.h
src/ENGINE/src/Math-Engine/data-struct/vector/: vector.cpp  vector.h
src/ENGINE/src/Rndr-Engine/: factory.h  renderer.h
src/ENGINE/src/Rndr-Engine/api/opengl/: drawPrimitive.cpp  opengl.cpp  opengl.h
src/GUI/: Makefile
src/GUI/src/: Command.hpp
