[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "PolyNaN"
version = "0.0.1"
authors = [
  { name="drgsl", email="drgsl@outlook.com" },
]
description = "render-engine for polytopes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/drgsl/e-render"
Issues = "https://github.com/drgsl/e-render/issues"


